// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a task when pressed: Tasks Result 1`] = `
{
  "id": Any<String>,
  "position": 0,
  "stateId": "state-1",
  "text": "My new task",
}
`;

exports[`should focus on the input component and submit when 'Enter' is pressed: Tasks Result after pressing enter 1`] = `
{
  "id": Any<String>,
  "position": 0,
  "stateId": "state-1",
  "text": "My new task 2",
}
`;
